432: Fix the blurry logo printing

--- a/app/assets/stylesheets/components/programmes/_view-certificate.scss
+++ b/app/assets/stylesheets/components/programmes/_view-certificate.scss
@@ -60,11 +60,6 @@
     width: 100px;
     height: 100px;
     color: $ncce-white;
-    background-color: $ncce-wakaiwa-grey;
-    padding: 10px;
-    font-family: $font-family-heading;
-    font-weight: bold;
-    text-align: left;
   }
 
   &__name {
